CAUSEWAY-3838: adding details to the master/detail tree view